--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to the Haptic Experience
+description: This is a demo for a website with Heptic feedback upon touch 
